apps/healthview-echoexplore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoexplore-ingress
  namespace: healthview-echoexplore
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - echoexplore.mlthrive.com
        - api-echoexplore.mlthrive.com
      secretName: echoexplore-mlthrive-tls

  rules:
    - host: echoexplore.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoexplore-frontend-service
                port:
                  number: 80

    - host: api-echoexplore.mlthrive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoexplore-backend-service
                port:
                  number: 5000
